--- a/Contoso/appsettings.json
+++ b/Contoso/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "ContosoDb": "Server=(localdb)\\mssqllocaldb;Database=Contoso;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
